<resources>
    <string name="app_name">Контакты в Firebase</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="save_button">Сохранить</string>
    <string name="exit_button">Выйти</string>
    <string name="register_text">Необходима регистрация</string>
    <string name="login_text">Уже есть аккаунт</string>
</resources>
